# tabular

./: .SRCINFO  .env  .gitignore  ADDING_NEW_DATABASE.md  AST_ARCHITECTURE.md  AST_CHECKLIST.md  BUILD.md  CHECKLIST.md  Cargo.toml  FLATPAK_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INCREMENTAL_UPDATES.md  LICENSE  MULTI_CURSOR.md  Makefile  PKGBUILD  README.md  SELF_UPDATE.md  build.sh  build_deb.sh  build_deb_source_docker.sh  build_windows.ps1  color.txt  fix_backspace.py  flatpak_build.sh  flatpak_publish.sh  id.tabular.database.metainfo.xml  install.arch.sh  localhost  s.sh  tabular.desktop  test.db  test_data_directory.sh  upload_launchpad.sh
.cargo/: config.toml
.claude/: settings.json
.claude/plans/: datagrip-parity.plan.md
.github/workflows/: aur-publish.yml  build.yml  dependency-audit.yml  rust.yml
assets/: AppIcon.icns  Brave Browser 2025-07-19 22.29.04.afdesign  logo.afdesign  logo2.afdesign
aur/tabular-bin/: .SRCINFO  PKGBUILD  tabular-bin.install
data/: test.db
debian/: changelog  control  postinst  rules
docker/deb-builder/: Dockerfile
docs/adr/: 0001-transaction-mode-session-connection.md
examples/: lapce_editor_demo.rs
flatpak/: generate-cargo-sources.sh  id.tabular.database.flathub.yml  id.tabular.database.yml
ios/Xcode/: README.md
ios/Xcode/TabulariOS/Sources/App/: ContentView.swift  TabulariOSApp.swift
ios/Xcode/TabulariOS/Sources/FFI/: TabularFFI.h
ios/Xcode/TabulariOS/TabulariOS.xcodeproj/: project.pbxproj
ios/Xcode/scripts/: build-rust-xcframework.sh
macos/: Tabular-DeveloperID.entitlements  Tabular.entitlements
macos/Xcode/: README.md
macos/Xcode/Tabular.xcodeproj/: project.pbxproj
macos/Xcode/Tabular.xcodeproj/project.xcworkspace/xcuserdata/jayuda.xcuserdatad/: UserInterfaceState.xcuserstate
macos/Xcode/Tabular.xcodeproj/xcuserdata/jayuda.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/Xcode/TabularApp/: Info.plist  main.swift
macos/Xcode/scripts/: build-rust-ios.sh  build-rust-universal.sh
query/: paijo.sql  query_1752739547.sql
scripts/: update-aur.sh
src/: about.rs  ai_assistant.rs  auto_updater.rs  cache_data.rs  config.rs  connection.rs  curl_import.rs  data_table.rs  diagram_view.rs  dialog.rs  directory.rs  driver_mongodb.rs  driver_mssql.rs  driver_mysql.rs  driver_postgres.rs  driver_redis.rs  driver_sqlite.rs  editor.rs  editor.rs.bak3  editor_autocomplete.rs  editor_autocomplete_new.rs  editor_buffer.rs  editor_rope_widget.rs  editor_selection.rs  editor_state_adapter.rs  editor_widget.rs  export.rs  floem_app.rs  floem_connection.rs  floem_query.rs  helpers.rs  http_client.rs  lapce_editor.rs  lib.rs  main.rs  models.rs  modules.rs  redis_browser.rs  reproduce_issue.rs  safety_guard.rs  (+11 more)
src/connection/: crud.rs  execute.rs  metadata.rs  mod.rs  pool.rs  session.rs  sql.rs  types.rs  ui.rs
src/connection/metadata/: cache.rs  columns.rs  databases.rs  ddl.rs  mod.rs
src/data_table/: filter_sort.rs  mod.rs  pagination.rs  render_data.rs  render_structure.rs  selection.rs  structure.rs  utils.rs
src/models/: enums.rs  structs.rs
src/query_ast/: ast.rs  errors.rs  executor.rs  logical.rs  mod.rs  parser.rs  plan_cache.rs  rewrite.rs
src/query_ast/emitter/: dialect.rs  mod.rs
src/query_ast/executors/: mod.rs  mongodb.rs  mssql.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs
src/query_tools/: mod.rs
src/window_egui/: app_impl.rs  connection_mgr.rs  diagram.rs  init.rs  mod.rs  notifications.rs  pagination.rs  query_jobs.rs  render_dialogs.rs  search.rs  settings.rs  sidebar_tree.rs  style.rs  table_wizard.rs  tree_loader.rs  update.rs
tests/: editor_buffer_tests.rs  query_ast_tests.rs  syntax_ts_tests.rs
wix/: main.wxs
