[package]
name = "tabular"
version = "0.4.10"
edition = "2024"

[lib]
name = "tabular"
crate-type = ["rlib", "cdylib", "staticlib"]

# Cargo.toml
[package.metadata.bundle]
name = "Tabular"
identifier = "id.tabular.database"
icon = ["assets/AppIcon.icns"]
category = "Developer Tool"
copyright = "Copyright © 2025 Y.N Pamungkas Jayuda" 
info = "Your SQL Editor, Forged with Rust: Fast, Safe, Efficient."

[dependencies]
eframe = "0.32.1"
image = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = [
       "runtime-tokio-native-tls",
       "sqlite",
       "mysql",
       "postgres",
       "chrono",
       "rust_decimal",
] }
redis = { version = "1.0.0-alpha.1", features = ["tokio-comp", "connection-manager"] }
bson = { version = "3", features = ["uuid-1"] }
mongodb = { version = "3.2.4", features = ["zlib-compression"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
egui_extras = "0.32.1"
lapce_core = { git = "https://github.com/lapce/lapce", package = "lapce-core", rev = "9cdbcf6bdf440bc6db7c3f39f76fcf0cab6262ea" }
colorful = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
regex = "1.0"
unicode-segmentation = "1.11"
csv = "1.3"
xlsxwriter = "0.6"
rfd = "0.15"  # For file dialog
hex = "0.4.3"
rust_decimal = "1.37.2"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15.0"
tiberius = { version = "0.12", default-features = false, features = [
       "winauth",
       "chrono",
       "time",
       "tds73",
       "rust_decimal",
       "bigdecimal",
] }
futures-util = "0.3"
tokio-util = { version = "0.7.16", features = ["compat"] }
# Self-update dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver = "1.0"
self_update = { version = "0.42", features = ["archive-tar", "archive-zip"], default-features = false }

[features]
# Placeholder feature to enable future granular rope editing integration with lapce_core::Buffer.
# Currently the implementation still falls back to single replace & full rope rebuild.
# Enabling this feature today does not change behavior yet, but provides a stable knob.
granular_edit = []
default = ["granular_edit"]

# Experimental: Lapce editor port. Off by default until fully integrated.
lapce_editor = []

# NOTE: It's recommended to pin `lapce_core` to a specific commit for reproducible builds, e.g.:
# lapce_core = { git = "https://github.com/lapce/lapce", package = "lapce-core", rev = "<commit-sha>" }