[package]
name = "tabular"
version = "0.5.25"
edition = "2024"

[lib]
name = "tabular"
crate-type = ["rlib", "cdylib", "staticlib"]

# Cargo.toml
[package.metadata.bundle]
name = "Tabular"
identifier = "id.tabular.database"
icon = ["assets/AppIcon.icns"]
category = "Developer Tool"
copyright = "Copyright © 2025 Y.N Pamungkas Jayuda"
info = "Your SQL Editor, Forged with Rust: Fast, Safe, Efficient."

[dependencies]
eframe = "0.32.3"
image = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = [
       "runtime-tokio-native-tls",
       "sqlite",
       "mysql",
       "postgres",
       "chrono",
       "rust_decimal",
] }
# Force bundled SQLite to avoid missing runtime symbols (e.g., sqlite3_db_config) in
# Arch build chroot; ensures libsqlite3-sys builds its own recent SQLite.
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
sqlparser = { version = "0.50", optional = true }
sqlformat = "0.5.0"
redis = { version = "1.0.0-rc.5", features = [
       "tokio-comp",
       "connection-manager",
] }
bson = { version = "3", features = ["uuid-1"] }
mongodb = { version = "3.4.1", features = ["zlib-compression"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
egui_extras = "0.32.3"
colorful = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
regex = "1.12"
unicode-segmentation = "1.12"
csv = "1.4"
xlsxwriter = "0.6"
rfd = "0.15" # For file dialog
hex = "0.4.3"
rust_decimal = "1.39.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15.0"
md5 = "0.7"
tiberius = { version = "0.12", default-features = false, features = [
       "winauth",
       "chrono",
       "time",
       "tds73",
       "rust_decimal",
       "bigdecimal",
] }
futures-util = "0.3"
tokio-util = { version = "0.7.17", features = ["compat"] }
# Self-update dependencies
reqwest = { version = "0.12", features = [
       "json",
       "rustls-tls",
], default-features = false }
semver = "1.0"
self_update = { version = "0.42", features = [
       "archive-tar",
       "archive-zip",
], default-features = false }

tree-sitter = { version = "0.25.10", optional = true }
tree-sitter-sequel = { version = "0.3.11", optional = true }
tree-sitter-json = "0.24.8"
tree-sitter-javascript = "0.25.0"
# Tree-sitter highlighter engine for query-based syntax scopes
anyhow = { version = "1", optional = true }
once_cell = "1"
thiserror = "1"
async-trait = "0.1.89"
cargo-deb = "3.6.2"

[features]
default = ["tree_sitter_sequel", "query_ast"]

# Enable experimental tree-sitter SQL highlighting / structural parsing.
# Activate with: `cargo run --features tree_sitter_sequel` (nama feature memakai underscore)
tree_sitter_sequel = ["tree-sitter", "tree-sitter-sequel", "anyhow"]

# Enable experimental logical query AST parsing + emission (phase 1: simple SELECT)
query_ast = ["sqlparser"]
sqlparser = ["dep:sqlparser"]

# removed lapce_core in egui-only mode

[package.metadata.deb]
name = "tabular"
maintainer = "Tabular Team <yulius.jayuda@gmail.com>"
copyright = "Copyright © 2025 Y.N Pamungkas Jayuda"
license-file = ["LICENSE", "4"]
section = "utils"
priority = "optional"
depends = [
       "libc6",
       "libssl3",
       "libgtk-3-0",
       "libxcb1",
       "libxkbcommon0",
       "libglib2.0-0",
]
assets = [
       [
              "tabular.desktop",
              "usr/share/applications/tabular.desktop",
              "644",
       ],
       [
              "assets/logo.png",
              "usr/share/icons/hicolor/512x512/apps/tabular.png",
              "644",
       ],
       [
              "LICENSE",
              "usr/share/doc/tabular/LICENSE",
              "644",
       ],
       [
              "LICENSE-AGPL",
              "usr/share/doc/tabular/LICENSE-AGPL",
              "644",
       ],
]
extended-description = "Tabular helps you explore and query SQL and NoSQL databases from a single desktop app."
recommends = ["update-desktop-database", "gtk-update-icon-cache"]
maintainer-scripts = "debian"
