[package]
name = "tabular"
version = "0.8.3"
edition = "2024"

[lib]
name = "tabular"
crate-type = ["rlib", "cdylib", "staticlib"]

# Cargo.toml
[package.metadata.bundle]
name = "Tabular"
identifier = "id.tabular.database"
icon = ["assets/AppIcon.icns"]
category = "Developer Tool"
copyright = "Copyright © 2025 Y.N Pamungkas Jayuda"
info = "Your SQL Editor, Forged with Rust: Fast, Safe, Efficient."

[dependencies]
eframe = "0.34"
image = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.9", features = [
       "runtime-tokio",
       "tls-native-tls",
       "sqlite",
       "mysql",
       "postgres",
       "chrono",
       "rust_decimal",
] }
# Force bundled SQLite to avoid missing runtime symbols (e.g., sqlite3_db_config) in
# Arch build chroot; ensures libsqlite3-sys builds its own recent SQLite.
# NOTE: capped at 0.37 — sqlx-sqlite 0.9 requires libsqlite3-sys <0.38 and the
# `links = "sqlite3"` constraint allows only one version in the tree.
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
sqlparser = { version = "0.62", optional = true }
sqlformat = "0.5.0"
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }
bson = { version = "3", features = ["uuid-1"] }
mongodb = { version = "3.7.0", features = ["zlib-compression"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
egui_extras = { version = "0.34", features = ["datepicker"] }
# Date type consumed by egui_extras' DatePickerButton (chrono elsewhere).
jiff = "0.2"
colorful = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
regex = "1.12"
unicode-segmentation = "1.13"
csv = "1.4"
xlsxwriter = "0.6"
rfd = "0.17" # For file dialog
hex = "0.4.3"
rust_decimal = "1.42.1"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15.0"
md5 = "0.8"
tiberius = { version = "0.12", default-features = false, features = [
       "winauth",
       "chrono",
       "time",
       "tds73",
       "rust_decimal",
       "bigdecimal",
] }
futures-util = "0.3"
tokio-util = { version = "0.7.18", features = ["compat"] }
# Self-update dependencies
reqwest = { version = "0.13", features = [
       "json",
       "multipart",
       "form",
       "rustls",
       "blocking",
], default-features = false }
semver = "1.0"

tree-sitter = { version = "0.26", optional = true }
tree-sitter-sequel = { version = "0.3.11", optional = true }
tree-sitter-json = "0.24.8"
tree-sitter-javascript = "0.25.0"
# Tree-sitter highlighter engine for query-based syntax scopes
anyhow = { version = "1", optional = true }
once_cell = "1"
thiserror = "2"
async-trait = "0.1.89"
cargo-deb = "3.7.0"
deadpool = "0.12.3"
deadpool-tiberius = "0.1.9"
# Cipher for the encrypted-file secret store fallback (src/secrets.rs);
# the primary OS-keychain backends are declared per-target below.
chacha20poly1305 = "0.11"

# OS keychain backends (see src/secrets.rs). Linux is opt-in via the
# `linux-keyring` feature because Secret Service pulls a D-Bus build/runtime
# dependency into the packaging chain (deb/flatpak/AUR); without it Linux
# uses the encrypted-file store.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = "4"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = "4"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "4", optional = true }

[features]
default = ["tree_sitter_sequel", "query_ast"]

# Linux only: store secrets in the freedesktop Secret Service instead of the
# encrypted file (requires libdbus at build/run time).
linux-keyring = ["dep:keyring"]

# Enable experimental tree-sitter SQL highlighting / structural parsing.
# Activate with: `cargo run --features tree_sitter_sequel` (nama feature memakai underscore)
tree_sitter_sequel = ["tree-sitter", "tree-sitter-sequel", "anyhow"]

# Enable experimental logical query AST parsing + emission (phase 1: simple SELECT)
query_ast = ["sqlparser"]
sqlparser = ["dep:sqlparser"]

# removed lapce_core in egui-only mode

[package.metadata.deb]
name = "tabular"
maintainer = "Tabular Team <yulius.jayuda@gmail.com>"
copyright = "Copyright © 2025 Y.N Pamungkas Jayuda"
license-file = ["LICENSE", "4"]
section = "utils"
priority = "optional"
depends = [
       "libc6",
       "libssl3",
       "libgtk-3-0",
       "libxcb1",
       "libxkbcommon0",
       "libglib2.0-0",
]
assets = [
       [
              "tabular.desktop",
              "usr/share/applications/tabular.desktop",
              "644",
       ],
       [
              "assets/logo.png",
              "usr/share/icons/hicolor/512x512/apps/tabular.png",
              "644",
       ],
       [
              "LICENSE",
              "usr/share/doc/tabular/LICENSE",
              "644",
       ],
       [
              "LICENSE-AGPL",
              "usr/share/doc/tabular/LICENSE-AGPL",
              "644",
       ],
]
extended-description = "Tabular helps you explore and query SQL and NoSQL databases from a single desktop app."
recommends = ["update-desktop-database", "gtk-update-icon-cache"]
maintainer-scripts = "debian"
